fix items alignment

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 .Navigation{
-    background-color: #008ac1;
+    background-color: #99D2E9;
     color: white;
     font-family: 'Roboto', sans-serif;
     line-height: 24px;
@@ -7,21 +7,25 @@
     height: 70px;
     width: 100%;
     position: relative;
+    display: flex;
+    justify-content: space-between;
 }
 
 .Navigation > .Nav-header {
-  display: inline;
+  display: flex;
 }
 
 .Navigation .NavContainer{
-  margin-left: 60px;
+  
 }
 .Navigation > .Nav-btn {
   display: none;
 }
 
 .Navigation > .Nav-Links {
-  display: inline;
+  /* display: inline; */
+  /* flex: 1; */
+  align-self: flex-end;
   font-size: 18px;
   height: 100%;
   float: right;
@@ -29,7 +33,8 @@
 }
 
 .Navigation > .Nav-Links > .Logged-In{
-  display: inline;
+  display: flex;
+  align-items: baseline;
 }
 
 .Navigation .Nav-Links .Drop{
@@ -44,7 +49,7 @@
 .Profile{
   float: right;
   position: relative;
-  display: inline-block;
+  /* display: inline-block; */
 }
 
 .Navigation > .Nav-Links > a {
@@ -60,8 +65,27 @@
   display: inline-block;
 }
 .Navigation .UserProfileName{
-  display: inline;
+  /* display: inline; */
+  padding: 1.3rem 1rem;
+  /* padding-top: 90px; */
 }
+.Navigation .UserProfileName strong{
+  padding-bottom: 4rem;
+  color: black;
+}
+.UserProfileName .NameUser{
+  display: inherit;
+}
+.Navigation i {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  margin-top: 2rem;
+  padding: 5px;
+  transform: rotate(45deg);
+  /* -webkit-transform: rotate(45deg); */
+}
+
 .Navigation > .Nav-Links > a:hover {
   height: 100%;
   font-weight: bold;
